# es-client

./: .dockerignore  README.en.md  README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.copilotcode/rules/: env.md
.github/workflows/: build.yml  release.yml  upgrade.yml
deploy/: Dockerfile  README.md  docker-compose.yml  nginx.conf
docs/: BUILD.md  DEBUG.md  GITHUB_ACTIONS_REDIGN.md
src/: App.vue  main.ts
src-chrome/: manifest.json
src-chrome/_locales/de/: messages.json
src-chrome/_locales/en/: messages.json
src-chrome/_locales/ja/: messages.json
src-chrome/_locales/zh_TW/: messages.json
src-edge/: manifest.json
src-edge/_locales/de/: messages.json
src-edge/_locales/en/: messages.json
src-edge/_locales/zh_CN/: messages.json
src-firefox/: manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: BaseSearchRecordService.ts  DevToolFileService.ts  SeniorSearchRecordService.ts  index.ts
src/data/: UpdateLog.ts
src/domain/: IndexInstance.ts
src/entity/: Base.ts  BaseOrder.ts  index.ts
src/enumeration/: LocalNameEnum.ts
src/global/: BeanFactory.ts
src/hooks/: ColorMode.ts  UseQuery.ts  UseQueryApi.ts  UseState.ts  index.ts
src/i18n/: index.ts
src/plugins/: umami.ts
src/store/: IndexStore.ts  IndexUsageStore.ts  LoadingStore.ts  UrlStore.ts  index.ts
src/utils/: Assert.ts
test/: SqlParser.ts  createGeoIndex.ts  createLogIndex.ts  createMultipleIndices.ts
(+226 files in other folders)
